<resources>
    <!--  Main page  -->
    <string name="app_name">BookIt</string>
    <string name="guest_button">guest</string>
    <string name="hello_message_textview">Hello, Guest.</string>
    <string name="search_button">search</string>
    <string name="bookings_button">bookings</string>
    <string name="explore_button">explore</string>
    <string name="filter_button">filter study rooms</string>
    <string name="manage_room_button">manage rooms</string>
    <string name="manage_admin_button">manage admins</string>
    <string name="manage_building_button">add/delete buildings</string>
    <string name="sign_out_button_caption">sign out</string>
    <!--  Explore page  -->
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="ils_button">informal learning spaces</string>
    <string name="study_rooms_button">study rooms</string>
    <string name="lecture_halls_button">lecture halls</string>
    <!--  Dynamic building page  -->
    <string name="building_name_textview">Dynamic Building</string>
    <string name="building_code_textview">Dynamic Building Code</string>
    <string name="type_textview">Dynamic Type</string>
    <!--  Search Page  -->
    <string name="building_search">Search</string>
    <string name="search_guild_text">Please choose one option below for more info</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="recycler_room_name">NOT FOUND</string>
    <!--  Dynamic Room Page  -->
    <string name="directions_button">take me there</string>
    <string name="start_time_button">start time</string>
    <!--  Filter Page  -->
    <string name="hours_button">duration</string>
    <string name="filter_bottom_button">filter</string>
    <string name="day_button">day</string>
    <string name="filter_info_textView">NO_INFO_TO_SHOW</string>
    <string name="book_now_button">book now</string>
    <string name="month_year_textview">Oct 2023</string>
    <string name="previous_button">prev</string>
    <string name="next_button">next</string>
    <string name="view_comments_button">view comments</string>
    <string name="report_button">report room</string>
    <!--  Management Pages  -->
    <string name="show_current_admin_button">see current</string>
    <string name="add_new_admin_button">add new admin</string>
    <string name="admin_user_email">USER NOT FOUND</string>
    <string name="email_textView">Email:</string>
    <string name="email_hint">Email of the new admin</string>
    <string name="assign_building_name">BUILDING NOT FOUND</string>
    <string name="remove_building_assignment_button">remove building assignment</string>
    <string name="remove_admin_assignment_button">remove admin identity</string>
    <string name="submit_assign_admin_button">assign admin</string>
    <string name="search_building_name">BUILDING NOT FOUND</string>
    <!--  Room Management Page  -->
    <string name="add_room_button">add study room</string>
    <string name="modify_room_button">modify study room info</string>
    <string name="admin_info_textView">ADMIN NOT FOUND</string>
    <string name="text_buildings">Buildings</string>
    <!--  Add StudyRoom Page  -->
    <string name="add_room_building_name_textView">Add study room to building: [BUILDING CODE]</string>
    <string name="room_number_textView">Room Number:</string>
    <string name="room_number_editText_hint">Room Number of the study room</string>
    <string name="capacity_textView">Capacity:</string>
    <string name="capacity_editText_hint">Capacity of the study room</string>
    <string name="features_textView">Features:</string>
    <string name="features_editText_hint">Features available</string>
    <string name="add_new_room_button">add new study room</string>
    <!--  Delete Building Page  -->
    <string name="delete_building_textView">Add/Delete Building</string>
    <string name="delete_building_button">delete selected building</string>
    <string name="add_building_button">add a new building</string>
    <!--  Add Building Page  -->
    <string name="add_building_textView">Add a new building into the system</string>
    <string name="building_name_textView">Building Name:</string>
    <string name="building_name_editText">Type building full name here</string>
    <string name="building_code_textView">Building Code:</string>
    <string name="building_code_editText">Four letter building code</string>
    <string name="address_textView">Building Address:</string>
    <string name="address_editText">No., Street, City, Province</string>
    <string name="add_new_building_button">add new building</string>
    <string name="open_time_monday_button">Mon</string>
    <string name="close_time_monday_button">Mon</string>
    <string name="open_time_tuesday_button">Tue</string>
    <string name="close_time_tuesday_button">Tue</string>
    <string name="open_time_wednesday_button">Wed</string>
    <string name="close_time_wednesday_button">Wed</string>
    <string name="open_time_thursday_button">Thur</string>
    <string name="close_time_thursday_button">Thur</string>
    <string name="open_time_friday_button">Fri</string>
    <string name="close_time_friday_button">Fri</string>
    <string name="open_time_saturday_button">Sat</string>
    <string name="close_time_saturday_button">Sat</string>
    <string name="open_time_sunday_button">Sun</string>
    <string name="close_time_sunday_button">Sun</string>
    <string name="open_times_textView">open time of the week</string>
    <string name="close_times_textView">close time of the week</string>
    <!--  Delete StudyRoom Page  -->
    <string name="delete_room_from_building_textView">Delete study room from building: [BUILDING CODE]</string>
    <string name="modify_time_slots_button">modify time slots</string>
    <string name="delete_study_room_button">delete room</string>
    <!--  Comment Pages  -->
    <string name="post_comment_button">post comment</string>
    <string name="message_hint_text_caption">Please enter a comment here regarding the study room.</string>
    <string name="post_comment_bottom_button">send your post</string>
    <!-- Web Client ID -->
    <string name="server_client_id">111894204425-1rmaa8m6jh19fnjl34hmf4tk0sqmvuhu.apps.googleusercontent.com</string>
</resources>