<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#FFF2D8"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/room_bookings_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:fontFamily="@font/roboto_slab"
                app:layout_constraintStart_toEndOf="@+id/calendar_bookings_imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/calendar_bookings_imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/calendar_bookings" />

            <TextView
                android:id="@+id/date_bookings_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/calendar_bookings_imageView"
                app:layout_constraintTop_toBottomOf="@+id/room_bookings_textView"
                app:layout_constraintVertical_bias="0.714" />

            <TextView
                android:id="@+id/timeslot_bookings_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toEndOf="@+id/calendar_bookings_imageView"
                app:layout_constraintTop_toBottomOf="@+id/room_bookings_textView"
                app:layout_constraintVertical_bias="0.259" />

            <TextView
                android:id="@+id/action_bookings_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.856"
                app:layout_constraintStart_toEndOf="@+id/calendar_bookings_imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.493" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>